Cria novas pastas com os exercícios das novas aulas tratando-se sobre imagens, links e tabelas

--- a/HTML/primeiros códigos/index1.html
+++ b/HTML/primeiros códigos/index1.html
@@ -40,5 +40,7 @@
       <li>notebook</li>
       <li>roteador</li>
     </ol>
+
+    <img src="../HTML/Imagens/ACI_Render_de_Ezio.webp" alt="Ezio Auditore" height="300px" width="200px">
 </body>
 </html>
