Termina o primeiro projeto do curso

--- a/HTML/Faculdade_ficticia/contact.html
+++ b/HTML/Faculdade_ficticia/contact.html
@@ -4,9 +4,56 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Unes - Contato</title>
 </head>
-<body>
-  
+<body background="img/fundo2.png">
+  <table width="900px" align="center">
+    <tr>
+      <td height="90"><img src="Img/logo.png" alt="Logo UNES"></td>
+      <td align="right">
+        <a href="index.html">Home</a> | 
+        <a href="who.html">Quem Somos</a> | 
+        <a href="contact.html">Contato</a>
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="2">
+        <h2>Entre em contato</h2>
+        <p>
+          Lorem ipsum dolorsit amet consectetur adipisicing elit. Dolorem, earum inventore perspiciatis ducimus officiis accusantium labore nulla, numquam cumque reprehenderit quasi repellat illo eaque ea laborum in exercitationem. Dolorem, facere.
+        </p>
+
+        <hr>
+
+        <form action="">
+          <fieldset>
+            <div>
+              <label for="email">Informe seu E-mail</label><br>
+              <input type="text" name="email" id="">
+            </div>
+            <br>
+            <div>
+              <label for="assunto">Assunto</label><br>
+              <input type="text" name="assunto" id="">
+            </div>
+            <br>
+            <div>
+              <label for="descricao">Descricao</label><br>
+              <textarea name="descricao" id="" cols="30" rows="10"></textarea>
+            </div>
+            <br>
+            <div>
+              <input type="submit" value="enviar">
+            </div>
+          </fieldset>
+        </form>
+    </tr>
+
+    <tr>
+      <td align="center" colspan="2"><h3> Todos os direitos reservados </h3></td>
+    </tr>
+
+  </table>
 </body>
 </html>
