--- a/HTML/Faculdade_ficticia/who.html
+++ b/HTML/Faculdade_ficticia/who.html
@@ -4,9 +4,50 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Unes - Quem Somos</title>
 </head>
-<body>
-  
+<body background="img/fundo2.png">
+  <table width="900px" align="center">
+    <tr>
+      <td height="90"><img src="Img/logo.png" alt="Logo UNES"></td>
+      <td align="right">
+        <a href="index.html">Home</a> | 
+        <a href="who.html">Quem Somos</a> | 
+        <a href="contact.html">Contato</a>
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="2">
+        <h2>Quem Somos</h2>
+        <p>
+          Lorem <strong>ipsum dolor</strong> sit <em>amet</em> consectetur adipisicing elit. Dolorem, earum inventore perspiciatis ducimus officiis accusantium labore nulla, numquam cumque reprehenderit quasi repellat illo eaque ea laborum in exercitationem. Dolorem, facere.
+          Lorem ipsum, dolor sit <em>amet</em> consectetur adipisicing elit. Corrupti unde excepturi, fuga porro recusandae dolorem qui saepe, pariatur, praesentium ut id distinctio culpa reiciendis. Corporis exercitationem sed autem ab laborum.
+        </p>
+
+        <h2>5 Motivos para estudar</h2>
+        <ol>
+          <li> Material sempre atualizado</li>
+          <li> Tablets em sala de aula</li>
+          <li> Professores renomados</li>
+          <li> Universidade bem avaliada</li>
+          <li> Ótima localização</li>
+        </ol>
+
+        <hr>
+
+        <h2>Objetivos</h2>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, distinctio sint illum optio ipsa nemo ea. Fugit facilis sunt, eum eius, autem eaque numquam incidunt aut consequuntur quaerat quam qui.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis maxime amet eos porro. Aliquam soluta consequatur excepturi veniam animi libero, fugiat vero similique unde distinctio consectetur natus consequuntur ullam ipsum.
+        </p>
+      </td>
+    </tr>
+
+    <tr>
+      <td align="center" colspan="2"><h3> Todos os direitos reservados </h3></td>
+    </tr>
+
+  </table>
 </body>
 </html>
